setting up devise for authentication and database storage of password

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   <%= formtastic_stylesheet_link_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render :partial => "shared/navigation" %>
+  <%= render :partial => "shared/notices" %>
+  <%= yield %>
 </body>
 </html>
